--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 95%;
-  background: #1e3a8a; /* dark blue */
+  background: #1e3a8a;
   padding: 15px 40px;
   display: flex;
   align-items: center;
