--- a/src/pages/Bookings.css
+++ b/src/pages/Bookings.css
@@ -1,7 +1,7 @@
 /* ------------------------------
    Page Container
 ------------------------------ */
-.bookings-page {
+/* .bookings-page {
   max-width: 1150px;
   margin: 40px auto;
   padding: 20px;
@@ -14,7 +14,7 @@
   margin-bottom: 20px;
   font-weight: 700;
   text-align: center;
-}
+} */
 
 /* ------------------------------
    Empty State Message
